--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "passport": "~0.3.0",
     "passport-local": "^1.0.0",
     "pdf2json": "^1.1.5",
+    "randomstring": "^1.1.5",
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.3.5",
     "socket.io-client": "^1.3.5",
